@@ -1,4 +1,4 @@
-/* $Id: main.c,v 1.124 2002/11/08 16:11:49 ukai Exp $ */
+/* $Id: main.c,v 1.125 2002/11/08 17:32:52 ukai Exp $ */
 #define MAINPROGRAM
 #include "fm.h"
 #include <signal.h>
@@ -969,7 +969,7 @@ MAIN(int argc, char **argv, char **envp)
 #ifdef USE_ALARM
 	if (alarm_status & AL_IMPLICIT) {
 	    alarm_buffer = Currentbuf;
-	    alarm_status = AL_IMPLICIT_DONE | (AL_IMPLICIT & AL_ONCE);
+	    alarm_status = AL_IMPLICIT_DONE | (alarm_status & AL_ONCE);
 	}
 	else if (alarm_status & AL_IMPLICIT_DONE && alarm_buffer != Currentbuf) {
 	    setAlarmEvent(0, AL_UNSET, FUNCNAME_nulcmd, NULL);
@@ -5219,7 +5219,7 @@ SigAlarm(SIGNAL_ARG)
 	}
 	else if (alarm_status & AL_IMPLICIT) {
 	    alarm_buffer = Currentbuf;
-	    alarm_status = AL_IMPLICIT_DONE | (AL_IMPLICIT & AL_ONCE);
+	    alarm_status = AL_IMPLICIT_DONE | (alarm_status & AL_ONCE);
 	}
 	else if (alarm_status & AL_IMPLICIT_DONE
 		 && (alarm_buffer != Currentbuf || alarm_status & AL_ONCE)) {
